--- a/configs/apiserver.toml
+++ b/configs/apiserver.toml
@@ -1,4 +1,7 @@
-bind_addr = ":8080"
+bind_addr = ":3000"
+cors_allowed_origins = [ "http://localhost:8000" ]
+cors_allowed_methods = [ "GET", "POST", "PUT", "OPTIONS" ]
+cors_allowed_headers = [ "X-Requested-With", "Content-Type" ]
 
 [store]
 database_url = "root:123456@tcp(docker.for.mac.localhost:3306)/interest_points"
